Slots and inheritance first class (#632)